assets/css/style.css
/* ... */
.up-arrow a{
    color: #f2f2f2;
}

.up-arrow a:hover {
    color: rgb(23, 115, 234);
}

/* Copyright section */
.copyright {
    background-color: black;       
    color: #f2f2f2;
    text-align: center;
    width: 100%;
    height: 50px;
}

.copyright p {
    padding: 15px;
}

/* Contact page */

/* Position, dimension and background color */
.form {
    background-color: #46719c;
    position: relative;
    height: 95vh;
}

/* Form content wrapper size and position */
.form-container {
    width: 80%;
    height: 40vh;
    position: absolute; 
    top: 25vh;
    left: 10%;
}

/* Form section title */
.form-container h2 {
    height: 20%;
}

/* Wrapper for form's two elements */
#form-container-wrapper {
    width: 100%;
    height: 80%;
    box-sizing: border-box;
}

/* Form details */
#form-details {
    float: left;
    width: 30%;
    height: 100%;
}

#form-details div {
    height: 20%;
    margin: 10px 0;
}

#form-details div i {
    background-color: rgba(39, 58, 88, 0.8);
    height: 40px;
    width: 40px;
    text-align: center;
    line-height: 40px;
    border: 5px solid rgba(199, 199, 199, 0.8);
    border-radius: 50%;
}

#form-details div p {
    display: inline;
    font-size: 90%;
}

/* Input form */
#form-input {
    float: right;
    width: 70%;
    height: 100%;
}

.text-input-name {
    font-family: inherit;
    width: 47%;
    height: 40px;
    margin-left: 2%;
    margin-top: 2%;
    border-radius: 2px;
}

.text-input-email {
    font-family: inherit;
    width: 47%;
    height: 40px;
    margin-right: 2%;
    margin-top: 2%;
    float: right;
    border-radius: 2px;
}

.message-input {
    width: 96%;
    height: 150px;
    margin: 2% 2% 0 2%;
    border-radius: 2px;
    padding: 10px;
    font-family: inherit;
    box-sizing: border-box;
}

/* Newsletter checkbox */
.news-letter {
    margin-left: 2%;
    margin-top: 2%;
    font-size: 75%;
}

/* Submit button */
.message-button {
    margin-right: 2%;
    margin-top: 0.5%;
    float: right;
    height: 50px;
    width: 150px;
    border-radius: 25px;
    font-family: inherit;
    color: inherit;
    background-color: rgba(39, 58, 88, 0.8);
    border: 5px solid rgba(199, 199, 199, 0.8);
}

.message-button:hover {
    background-color: rgba(199, 199, 199, 0.8);
    border: 5px solid rgba(39, 58, 88, 0.8);
    color: #273a58;
}

/* Experience page */

/* Position, dimension and background color */
.experience {
    background-color: #46719c;
    position: relative;
    height: 1685px;
    padding-top: 100px;
}

/* Experience section title */
.experience h2 {
    text-align: center;
    margin-bottom: 25px;
}

/* Set up timeline */
.timeline {
    background-color: #273a58;
    height: 1500px;
    width: 5px;
    margin: 50px auto;
    position: relative;
    overflow: visible;
}

/* Font awsome as anchor element on timeline */
.timeline i {
    position: absolute;
    left: -17.5px;
    color: #f2f2f2;
    font-size: 250%;
}

/* Position anchor element for individual jobs */
#job-1 {
    top: 130px;
}

#job-2 {
    top: 430px;
}

#job-3 {
    top: 730px;
}

#job-4 {
    top: 1030px;
}

#job-5 {
    top: 1330px;
}

/* Job container */
.job-container {
    position: absolute;
    width: 500px;
    height: 300px;
    left: 50%;
    top: -130px;
    padding: 15px;
    margin: 0 30px;
    box-sizing: border-box;
}

.job-container div {
    background-color: #f2f2f2;
    color: #273a58;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    padding: 15px;
    box-sizing: border-box;
}

.job-container div img {
    position: relative;
    top: -50px;
    height: 75%;
}

.job-container div p {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 75%;
}

#position-left {
    left: -545px;
}

/* Media queries */

/* For medium screens sizes up to 1200px */
@media screen and (max-width: 1200px) {

    /* Header */
    header {
        line-height: 60px;
    }

    #burger {
        width: 66px;
        height: 66px;
    }

    nav {
        line-height: 66px;
    }

    #logo {
        margin-left: 20px;
        margin-right: 10px;
    }
    
    #logo a {
        font-size: 80%;
    }
    
    nav {
        font-size: 100%;
    }
    
    #menu {
        margin-left: 15px;
        margin-right: 15px;
    }

    /* Main page cover text*/
    #cover-text {
        left: 10%;
        height: 115px;
        width: 280px;
    }
    
    #cover-text h2 {
        font-size: 420%;
    }

    /* About section */
    #about div {
        width: 50%;
        font-size: 80%;
    }

    /* Skills section */
    .skills-level-container {
        height: 15%;
    }

    .skills-indicator {
        width: 20px;
        height: 20px;
    }

    /* Experience page */
    .job-container {
        width: 350px;
        height: 210px;
        top: -90px;
    }

    .job-container div p {
        font-size: 50%;
    }

    #position-left {
        left: -395px;
    }

    #job-1 {
        top: 90px;
    }
    
    #job-2 {
        top: 320px;
    }
    
    #job-3 {
        top: 550px;
    }
    
    #job-4 {
        top: 780px;
    }
    
    #job-5 {
        top: 1010px;
    }

    .timeline {
        height: 1130px;
    }

    .experience {
        height: 1300px;
    }
    
    .job-container div img {
        top: -20%;
    }

    /* Contact page */
    #form-details div p {
        font-size: 70%;
    }
}
/* ... */

